Updated parameter choices and how things are saved

--- a/Version4/Plots.ipynb
+++ b/Version4/Plots.ipynb
@@ -141,24 +141,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "run_info = pd.read_csv('run_info4.csv',delimiter=',')\n",
-    "\n",
-    "row = run_info[run_info['run']==run]\n",
-    "#use -1 so always read most recently written row tih that run number\n",
-    "r = row.iloc[-1,1] #radius [m]\n",
-    "Tm0 = row.iloc[-1,2] # initial mantle and core temp [K]\n",
-    "tstart = row.iloc[-1,3]\n",
-    "tend = row.iloc[-1,4] # max possible time of simulation [Myr]\n",
-    "tstep = row.iloc[-1,5] #max timestep [Myr]\n",
-    "tsolid = row.iloc[-1,6] #time at which solidifcation finishes [Myr] if tsolid == tend then core may not have finished solidifying\n",
-    "cond_i= row.iloc[-1,7] #index in array at which mantle started conducting\n",
+    "run_info = pd.read_csv('run_info.csv',delimiter=',',skiprows=[1])\n",
+    "r = run_info[run_info['run']==run]['r'][0] #radius [m]\n",
+    "dr = run_info[run_info['run']==run]['dr'][0] #grid spacing [m]\n",
+    "tstart = run_info[run_info['run']==run]['t_acc'][0] #accretion time [Myr after CAIs]\n",
+    "tend = run_info[run_info['run']==run]['t_end_max'][0] # max possible time of simulation [Myr]\n",
+    "tstep = run_info[run_info['run']==run]['step_size'][0] #step size in integration [Myr]\n",
+    "tsolid = run_info[run_info['run']==run]['t_end_actual'][0] #time at which solidifcation finishes [Myr] if tsolid == tend then core may not have finished solidifying\n",
+    "cond_t = run_info[run_info['run']==run]['cond_t'][0]\n",
     "if conduction == True:\n",
-    "    cond_i = int(cond_i)\n",
-    "    cond_t = t[cond_i]/Myr #time at which mantle switched to conduction\n",
-    "    \n",
-    "dr=row.iloc[-1,9] #cell spacing\n",
-    "dt =row.iloc[-1,10] #T_profile output frequency\n",
-    "viscosity = row.iloc[-1,11] #viscosity profile"
+    "    cond_t = cond_t/Myr #time at which mantle switched to conduction\n",
+    "dt = run_info[run_info['run']==run]['save_interval_t'][0] #variable output frequency\n",
+    "viscosity = run_info[run_info['run']==run]['default'][0] #viscosity profile"
    ]
   },
   {
