Added extra plots for timestep testing

--- a/Version4/plot_combined.ipynb
+++ b/Version4/plot_combined.ipynb
@@ -63,7 +63,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "run=4\n",
+    "run=1\n",
     "save = False # do you want to save your figures?\n",
     "conduction = True #does the mantle switch to conduction\n",
     "path = 'Results_combined/Timestep_test/' #path to files"
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "15ac0126",
    "metadata": {
     "scrolled": true
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "2c9f38a2",
    "metadata": {},
    "outputs": [],
@@ -277,7 +277,7 @@
     "print(f'Erosion of stratification by {terode:.2f} Myr') \n",
     "print(f'Super adiabatic CMB heat flux starts at {tc_conv1:.2f} Myr')\n",
     "print(f'Super adiabatic CMB heat flux ends at {tc_conv2:.2f} Myr')\n",
-    "print(f'End of mantle convection by {cond_t:.2f} Myr')"
+    "print(f'End of mantle convection by {cond_t/Myr:.2f} Myr')"
    ]
   },
   {
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "c7d2fe87",
    "metadata": {},
    "outputs": [],
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "e9176001",
    "metadata": {},
    "outputs": [],
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "00b96a7d",
    "metadata": {},
    "outputs": [],
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "e553f19e",
    "metadata": {},
    "outputs": [],
@@ -334,9 +334,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "737a12a0",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "plt.figure()\n",
@@ -364,85 +366,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94dbf569",
-   "metadata": {},
-   "source": [
-    "### Temperature change \n",
-    "$\\frac{dT}{dt} > 0$"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7c1b7bfa",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure()\n",
-    "plt.pcolormesh(t_plot_all[:-1],rplot,np.diff(Tall,1),shading = 'nearest',norm=mcolors.LogNorm(vmin=1e-5,vmax=1e2)) # use same vmin and vmax as other plots to make them comparable\n",
-    "plt.hlines(rc/1e3,min(t/Myr),max(tall/Myr),linestyle='--',color='black',label='CMB')\n",
-    "plt.fill_betweenx([0,rc/5e3],t[np.where(Fcmb>Fad)[0]][0]/Myr,t[np.where(Fcmb>Fad)[0]][-1]/Myr,alpha=0,hatch='/',label='$F_{CMB}>F_{ad}$')\n",
-    "plt.plot(t/Myr,r_unstable,linestyle='dotted',label='Convecting core')\n",
-    "if conduction == True:\n",
-    "    plt.plot(t[t/Myr<=cond_t]/Myr,(r-d0[t/Myr<=cond_t])/1e3,linestyle='dashed',label='base of $\\delta_0$',color='blue')\n",
-    "    plt.vlines(t[t/Myr<=cond_t][-1]/Myr,r/1e3,rc/1e3,linestyle='dotted',label='conductive mantle',color='red')\n",
-    "else:\n",
-    "    plt.plot(t/Myr,(r-d0)/1e3,linestyle='dashed',label='base of $\\delta_0$',color='blue')\n",
-    "plt.ylabel('r /km')\n",
-    "plt.xlabel('t / Myr')\n",
-    "#plt.ylim([(r-10000)/1e3,r/1e3])\n",
-    "plt.ylim([0,r/1e3])\n",
-    "plt.vlines(tdiff[-1]/Myr,0,r/1e3,linestyle='-.',label='Differentiation')\n",
-    "plt.colorbar(label='T/K')\n",
-    "plt.title(f'Run {run} \\n positive temperature change {(diff_T-1400)/400:.2f}')\n",
-    "#plt.xscale('log')\n",
-    "plt.xlim([0,30])\n",
-    "plt.legend(loc='lower right')\n",
-    "if save == True:\n",
-    "    plt.savefig(f'Plots/dTall_run{run}.png')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9c09bd22",
-   "metadata": {},
-   "source": [
-    "$\\frac{dT}{dt}<0$"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d80fdbd4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure()\n",
-    "plt.pcolormesh(t_plot_all[:-1],rplot,-np.diff(Tall,1),shading = 'nearest',norm=mcolors.LogNorm(vmin=1e-5,vmax=1e2)) # use same vmin and vmax as other plots to make them comparable\n",
-    "plt.hlines(rc/1e3,min(t/Myr),max(tall/Myr),linestyle='--',color='black',label='CMB')\n",
-    "plt.fill_betweenx([0,rc/5e3],t[np.where(Fcmb>Fad)[0]][0]/Myr,t[np.where(Fcmb>Fad)[0]][-1]/Myr,alpha=0,hatch='/',label='$F_{CMB}>F_{ad}$')\n",
-    "plt.plot(t/Myr,r_unstable,linestyle='dotted',label='Convecting core')\n",
-    "if conduction == True:\n",
-    "    plt.plot(t[t/Myr<=cond_t]/Myr,(r-d0[t/Myr<=cond_t])/1e3,linestyle='dashed',label='base of $\\delta_0$',color='blue')\n",
-    "    plt.vlines(t[t/Myr<=cond_t][-1]/Myr,r/1e3,rc/1e3,linestyle='dotted',label='conductive mantle',color='red')\n",
-    "else:\n",
-    "    plt.plot(t/Myr,(r-d0)/1e3,linestyle='dashed',label='base of $\\delta_0$',color='blue')\n",
-    "plt.ylabel('r /km')\n",
-    "plt.xlabel('t / Myr')\n",
-    "#plt.ylim([(r-10000)/1e3,r/1e3])\n",
-    "plt.ylim([0,r/1e3])\n",
-    "plt.vlines(tdiff[-1]/Myr,0,r/1e3,linestyle='-.',label='Differentiation')\n",
-    "plt.colorbar(label='T/K')\n",
-    "plt.title(f'Run {run} \\n negative temperature change {(diff_T-1400)/400:.2f}')\n",
-    "#plt.xscale('log')\n",
-    "plt.xlim([0,30])\n",
-    "plt.legend(loc='lower right')\n",
-    "if save == True:\n",
-    "    plt.savefig(f'Plots/Tall_run{run}.png')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "5b0bd8d7",
    "metadata": {},
    "source": [
@@ -452,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "4e0b4648",
    "metadata": {},
    "outputs": [],
@@ -471,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "916dec84",
    "metadata": {},
    "outputs": [],
@@ -500,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "4977448f",
    "metadata": {},
    "outputs": [],
@@ -509,7 +432,6 @@
     "plt.semilogy(tdiff/Myr,Ra_d,label='model Ra',color='navy')\n",
     "plt.semilogy(t/Myr,RaH,label='$Ra_H$',color='seagreen')\n",
     "plt.semilogy(t/Myr,RanoH,label='Ra',color='cornflowerblue')\n",
-    "plt.semilogy(t/Myr,RaRob, label='$Ra_H^*$',color='skyblue')\n",
     "plt.semilogy(t_plot_all,Ra_crit_all,label='$Ra_c$',linestyle='dashed',color='black') \n",
     "plt.semilogy(t_plot_all,Ra_all,label='model Ra',color='navy') \n",
     "plt.ylim(bottom=1e0)#,top=1e8)\n",
@@ -528,50 +450,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "993296df",
-   "metadata": {},
-   "source": [
-    "### Plot difference between Rayleigh-Roberts and approximation"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b0b97ceb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig=plt.figure()\n",
-    "ax1 = fig.add_subplot(111)\n",
-    "ax2 = ax1.twinx()\n",
-    "ax1.semilogy(t[t/Myr<cond_t]/Myr,(abs(RaRob-Ra)/Ra)[t/Myr<cond_t],label='($Ra_H^*$-Ra)/Ra',color='black') \n",
-    "ax2.semilogy(t[t/Myr<cond_t]/Myr,(Ra/Racrit)[t/Myr<cond_t],label='Ra/$Ra_c$')\n",
-    "ax1.hlines(1,min(t/Myr),cond_t,linestyle='dashed',label='Ra=$Ra_H^*$',color='black')\n",
-    "ax2.hlines(1,min(t/Myr),cond_t,linestyle='dashed',label='Ra=$Ra_c$')\n",
-    "ax2.set_ylim(bottom=1e-1)\n",
-    "ax1.set_ylabel('($Ra_H^*$-Ra)/Ra')\n",
-    "ax1.set_xlabel('Time/Myr')\n",
-    "ax2.set_ylabel('Ra/$Ra_c$',color=u'#1f77b4')\n",
-    "ax2.tick_params('y',color='blue',labelcolor=u'#1f77b4')\n",
-    "fig.legend(loc=(0.65,0.68))\n",
-    "ax1.set_title(f'Run {run}')\n",
-    "\n",
-    "if save == True:\n",
-    "    plt.savefig(f'Plots/modified_Ra_run{run}.png',dpi=300)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "fdba53bf",
-   "metadata": {},
-   "source": [
-    "Could be nice to twin the axes on this and add one for silicate melt fraction?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "32a7b9a3",
    "metadata": {},
    "outputs": [],
@@ -615,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "81a8d842",
    "metadata": {},
    "outputs": [],
@@ -647,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "c7a77869",
    "metadata": {},
    "outputs": [],
@@ -679,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "a9a0ee4c",
    "metadata": {},
    "outputs": [],
@@ -711,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "0c687641",
    "metadata": {},
    "outputs": [],
@@ -739,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "30dd8b5a",
    "metadata": {},
    "outputs": [],
@@ -811,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "7fa684f5",
    "metadata": {},
    "outputs": [],
@@ -866,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "8feb51a1",
    "metadata": {},
    "outputs": [],
@@ -916,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "55e60719",
    "metadata": {},
    "outputs": [],
@@ -928,12 +808,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "ce01c0fa-bf50-42bc-a62a-6ae01304564d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "var_list2 = [run,dt,dr,diff_time, diff_T, peakT, tmax, tstrat_end, terode, tc_conv1, tc_conv2, cond_t, max_Rem, max_Remt, MAC_start,MAC_stop, CIA_start, CIA_stop, comp_start, comp_stop]\n",
+    "var_list2 = [run,tstep,dr,diff_time, diff_T, peakT, tmax, tstrat_end, terode, tc_conv1, tc_conv2, cond_t, max_Rem, max_Remt, MAC_start,MAC_stop, CIA_start, CIA_stop, comp_start, comp_stop]\n",
     "from csv import writer\n",
     "with open(f'{path}timestep_test.csv','a') as f_object:\n",
     "     writer_object = writer(f_object) #pass file object to csv.writer\n",
@@ -952,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "aca28459",
    "metadata": {},
    "outputs": [],
@@ -963,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "49d8a9c0",
    "metadata": {},
    "outputs": [],
@@ -980,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "7e81071b",
    "metadata": {},
    "outputs": [],
