Changed shading to gouraud

--- a/Plotting_scripts/Single_var_comparison.ipynb
+++ b/Plotting_scripts/Single_var_comparison.ipynb
@@ -242,7 +242,7 @@
     "plt.figure(figsize=[20,15])\n",
     "#subplot 1 - min value\n",
     "plt.subplot(2,1,1)\n",
-    "plt.pcolormesh(tall_1,rplot_1,Tall_1,shading = 'nearest',vmin=200,vmax=1700)\n",
+    "plt.pcolormesh(tall_1,rplot_1,Tall_1,shading = 'gouraud',vmin=200,vmax=1700)\n",
     "plt.hlines(rc1/1e3,min(t1),max(tall_1),linestyle='--',color='black',label='CMB')\n",
     "plt.vlines(t1[0],0,r1/1e3,linestyle='-.',label='Differentiation')\n",
     "plt.fill_betweenx([0,rc1/5e3],t1[np.where(Fcmb1>Fad1)[0]][0],t1[np.where(Fcmb1>Fad1)[0]][-1],alpha=0,hatch='/',label='$F_{CMB}>F_{ad}$')\n",
@@ -260,7 +260,7 @@
     "\n",
     "#subplot 2 - max value\n",
     "plt.subplot(2,1,2)\n",
-    "plt.pcolormesh(tall_2,rplot_2,Tall_2,shading = 'nearest',vmin=200,vmax=1700)\n",
+    "plt.pcolormesh(tall_2,rplot_2,Tall_2,shading = 'gouraud',vmin=200,vmax=1700)\n",
     "plt.hlines(rc2/1e3,min(t2),max(tall_2),linestyle='--',color='black',label='CMB')\n",
     "plt.vlines(t2[0],0,r2/1e3,linestyle='-.',label='Differentiation')\n",
     "plt.fill_betweenx([0,rc2/5e3],t2[np.where(Fcmb2>Fad2)[0]][0],t2[np.where(Fcmb2>Fad2)[0]][-1],alpha=0,hatch='/',label='$F_{CMB}>F_{ad}$')\n",
