Removed unnecessary plots

--- a/Plotting_scripts/plot_combined.ipynb
+++ b/Plotting_scripts/plot_combined.ipynb
@@ -68,13 +68,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "run=1\n",
-    "save = False# do you want to save your figures?\n",
-    "automated = False #if this run was one of an automated group\n",
-    "path = '../Results_combined/' #path to files\n",
-    "#path = '../Results_combined/rcmf_run2/' #path to files\n",
-    "#path = '../Run_params/berlin_test4/'\n",
-    "save_path = '../Plots/'\n",
+    "run=3\n",
+    "save = True# do you want to save your figures?\n",
+    "automated = True #if this run was one of an automated group\n",
+    "#path = '../Results_combined/' #path to files\n",
+    "path = '../Results_combined/Paper_run300km/params_1/' #path to files\n",
+    "save_path = '../Plots/Icarus_paper'\n",
     "#save_path = '../Plots/Paper_run4/'"
    ]
   },
@@ -347,7 +346,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import matplotlib.colors as mcolors"
+    "import matplotlib.colors as mcolors\n",
+    "from plot_params import f0"
    ]
   },
   {
@@ -371,6 +371,14 @@
     "for ind in min_unstable:\n",
     "    r_unstable = np.append(r_unstable,rplot[int(ind)])\n",
     "rc = r/2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9928ad7c",
+   "metadata": {},
+   "source": [
+    "Could log time in advance to speed this up"
    ]
   },
   {
@@ -400,67 +408,16 @@
     "    plt.plot(t_plot_t,(r-d0)/1e3,linestyle='dashed',label='base of $\\delta_0$',color='blue')\n",
     "    #plt.plot(t_plot_t[r_unstable==0][1:],(rc+dl)[r_unstable==0][1:]/1e3,linestyle='dotted',label='top of $\\delta_l$',color='blue')\n",
     "    plt.plot(t_plot_t,(rc+dl)/1e3,linestyle='dotted',label='top of $\\delta_l$',color='blue')\n",
-    "#plt.vlines(t[f<0.999000][0]/Myr,0/1e3,rc/1e3,linestyle='dotted',label='beginning of core solidification',color='black')\n",
+    "plt.plot(t_plot_t[f<f0],f[f<f0]*rc/1e3,linestyle='-.',color='black',label='Top of liquid core')\n",
     "#labels and limits\n",
     "plt.ylabel('r /km')\n",
     "plt.xlabel('t / Myr')\n",
     "plt.colorbar(label='T/K')\n",
     "plt.title(f\"Run {run}\")\n",
-    "plt.xscale('log')\n",
+    "#plt.xscale('log')\n",
     "plt.legend(bbox_to_anchor=[1.4,0.5])\n",
     "if save == True:\n",
     "    plt.savefig(f'{save_path}thermal_profile_{run}.png',bbox_inches='tight')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "55b61e4a",
-   "metadata": {},
-   "source": [
-    "Single temperature profile (choose the time of interest)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dc6289fe",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.scatter(t_plot_t,Tcmb-T_profile[:,nmantle+1],label='CMB-mantle temp')\n",
-    "plt.xlabel('Time/Myr')\n",
-    "plt.ylabel('Tcmb-Tm/K')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "62865acf",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.scatter(t_plot_t[:5],Tcmb[:5],label='CMB')\n",
-    "plt.scatter(t_plot_t[:5],T_profile[:5,nmantle-1],label='core')\n",
-    "plt.scatter(t_plot_t[:5],T_profile[:5,nmantle+1],label='mantle')\n",
-    "plt.legend()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "eaa386eb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "colors = ['black','darkblue','blue','royalblue','cornflowerblue','paleturquoise','salmon','maroon','saddlebrown','chocolate','orange','tan','olive','olivedrab','yellowgreen','darkolivegreen']\n",
-    "for i in range(3):\n",
-    "    plt.scatter(T_profile[i,:],rplot,label=f'{0.01*(i+1)} post diff',s=5,color=colors[i])\n",
-    "plt.scatter(Tdiff[:,-1],rplot,label='pre diff',s=5)\n",
-    "plt.ylabel('Distance from centre/km')\n",
-    "plt.xlabel('Temperature/K')\n",
-    "plt.legend(loc='lower left')\n",
-    "#plt.ylim([rc/1e3,r/1e3])\n",
-    "plt.xlim([1570,1582])"
    ]
   },
   {
@@ -632,32 +589,6 @@
     "plt.legend()\n",
     "if save == True:\n",
     "    plt.savefig(f'{save_path}d0_run{run}.png')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0ab93b29",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nlid_cells = np.round(d0/dr)\n",
-    "lid_start = nmantle - nlid_cells.astype(int) - 1\n",
-    "plt.scatter(t_plot_t[d0/rc<1],lid_start[d0/rc<1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f08b87d4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lid_start = nmantle - nlid_cells.astype(int) - 1\n",
-    "Tplot = np.zeros([len(t_plot_t)])\n",
-    "for i,lid in enumerate(lid_start):\n",
-    "    Tplot[i] = T_profile[i,lid-1]\n",
-    "plt.scatter(t_plot_t[:5],Tplot[:5])"
    ]
   },
   {
@@ -1058,13 +989,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "Rl = len(f[f<f0]) #length of solidification array\n",
     "fig, ax = plt.subplots(nrows=2,ncols=1,sharex='col',tight_layout=True,figsize=[8,5])\n",
     "\n",
-    "ln1 = ax[0].plot(t_plot_t,comp)\n",
-    "ax[1].plot(t_plot_t,therm)\n",
-    "for i in range(1,6,1):\n",
-    "    ax[0].plot(t_plot_t[f<f0],compdf.rolling(window=10*i,center=True).mean(),label=f'{10*i}')\n",
-    "    ax[1].plot(t_plot_t[f<f0],thermdf.rolling(window=10*i,center=True).mean(),label=f'{10*i}')\n",
+    "#ln1 = ax[0].plot(t_plot_t,comp)\n",
+    "#ax[1].plot(t_plot_t,therm)\n",
+    "for i in range(1,40,5):\n",
+    "    ax[0].plot(t_plot_t[f<f0],compdf.rolling(window=int(Rl/i),center=True).mean(),label=f'1/{i}')\n",
+    "    ax[1].plot(t_plot_t[f<f0],thermdf.rolling(window=int(Rl/i),center=True).mean(),label=f'1/{i}')\n",
     "#ax[0].legend(ln1+ln2,['Compositional','Thermal'])\n",
     "ax[0].set_ylabel('Compositional buoyancy flux/ kg$s^{-1}$')\n",
     "#ax2.set_yscale('log')\n",
@@ -1078,7 +1010,7 @@
    "id": "ac19851b",
    "metadata": {},
    "source": [
-    "A window width of 30--50 for data after the onset of core solidification seems sufficient to smooth the data."
+    "Window width doesn't change max height much it just changes duration which we will take from unsmoothed data. Use 1/30 of length as width unless dataset is smaller than 30 points."
    ]
   },
   {
@@ -1097,6 +1029,16 @@
    "metadata": {},
    "source": [
     "### B, Rem and buoyancy flux with time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "81d1e65e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "save = True"
    ]
   },
   {
@@ -1132,7 +1074,32 @@
     "ax[1].set_ylabel('Buoyancy flux /kg$s^{-1}$')\n",
     "ax[1].set_yscale('log')\n",
     "ax3.set_ylabel('Compositional/Thermal buoyancy flux')\n",
-    "ax3.set_ylim([0,20])"
+    "ax3.set_ylim([0,20])\n",
+    "if save == True:\n",
+    "    plt.savefig(f'{save_path}run_{run}_Bbuoy.png',dpi=450)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5d9754cc",
+   "metadata": {},
+   "source": [
+    "Calculate average field strength"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fe15bdd1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Btherm = B[(f>=f0)&(Rem>=10)]\n",
+    "Btherm_av = np.mean(Btherm)\n",
+    "Bcomp = B[(f<f0)&(Xs<Xs_eutectic)]\n",
+    "Bcomp_av = np.mean(Bcomp)\n",
+    "print(f'The average thermal field strength is {Btherm_av:.1f} muT')\n",
+    "print(f'The average compositional field strength is {Bcomp_av:.1f} muT')"
    ]
   },
   {
