--- a/Plotting_scripts/Icarus_paper_plots.ipynb
+++ b/Plotting_scripts/Icarus_paper_plots.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1d1d79fb",
+   "id": "476b1510",
    "metadata": {},
    "source": [
     "# Plots for Icarus paper <a class=\"anchor\" id=\"top\"></a>\n",
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c36cafa8",
+   "id": "858c9a33",
    "metadata": {},
    "source": [
     "### Set-up"
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a33d5e4",
+   "id": "f8c9fc40",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "058d7ae2",
+   "id": "e2694a4b",
    "metadata": {},
    "source": [
     "Choose run for main thermal plots and where to save files"
@@ -60,12 +60,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d226221",
+   "id": "31e9a252",
    "metadata": {},
    "outputs": [],
    "source": [
     "run=1\n",
-    "save = False # do you want to save your figures?\n",
+    "save = True # do you want to save your figures?\n",
     "automated = True \n",
     "log_time = True #do you want to plot time logarithmically\n",
     "path = '../Results_combined/Dodds_comp/' #path to files\n",
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca54fa85",
+   "id": "e6b6ddd9",
    "metadata": {},
    "source": [
     "Load results for differentiation"
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44b298a9",
+   "id": "8f615fff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9cc0f1a",
+   "id": "052ada3a",
    "metadata": {},
    "source": [
     "Load results for thermal evolution"
@@ -108,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "220edacd",
+   "id": "81a73c3d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d603c8a",
+   "id": "8c75b413",
    "metadata": {},
    "source": [
     "Concatenate shared variables"
@@ -154,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "255edd80",
+   "id": "470a4e51",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6931a02",
+   "id": "ed30a852",
    "metadata": {},
    "source": [
     "Scale time by Myr"
@@ -177,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a09f48f",
+   "id": "cf47ce2b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e39ff74",
+   "id": "bd60c1d2",
    "metadata": {},
    "source": [
     "Run info"
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a687995",
+   "id": "36932f53",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9cf5fce2",
+   "id": "b26d370e",
    "metadata": {},
    "source": [
     "## Summary statistics <a class=\"anchor\" id=\"stats\"></a>\n",
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb8c33c7",
+   "id": "142810ca",
    "metadata": {},
    "source": [
     "Load in results data"
@@ -226,7 +226,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b7b74b43",
+   "id": "bd4aa18e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2bfd17ed",
+   "id": "00b5daf1",
    "metadata": {},
    "source": [
     "Assign to variables values that will be used later"
@@ -244,7 +244,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "add4a996",
+   "id": "2c50f51a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea2bcfd9",
+   "id": "531bac0d",
    "metadata": {},
    "source": [
     "Print a summary"
@@ -279,7 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fbda61db",
+   "id": "a7877d6a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04e3d57a",
+   "id": "6b9f8dde",
    "metadata": {},
    "source": [
     "# Example run"
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2cdfc3d6",
+   "id": "7443d762",
    "metadata": {},
    "source": [
     "## Temperature profile <a class=\"anchor\" id=\"temp\"></a>\n",
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e0023f9",
+   "id": "71e0ab49",
    "metadata": {},
    "source": [
     "Create r array for plotting and prelog time to speed up plotting"
@@ -329,7 +329,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c98c253c",
+   "id": "893c3034",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3bf1de7c",
+   "id": "e037eae4",
    "metadata": {},
    "source": [
     "Make figure"
@@ -373,7 +373,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c1145740",
+   "id": "67d5a668",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f741be48",
+   "id": "32211a03",
    "metadata": {},
    "source": [
     "From Rem plot I think the magnetic field might turn off briefly?"
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8b5d9b6",
+   "id": "024a53e7",
    "metadata": {},
    "source": [
     "## Temperature and heat fluxes <a class=\"anchor\" id=\"flux\"></a>\n",
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5664f97",
+   "id": "e2915bd3",
    "metadata": {},
    "source": [
     "Do we want to put the temperature panel on here or not? Which mantle temps do we want?"
@@ -431,7 +431,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "058d3d29",
+   "id": "29c1b2fc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89c9f2ef",
+   "id": "7a48b211",
    "metadata": {},
    "source": [
     "## Magnetic Field Strength <a class=\"anchor\" id=\"Bfield\"></a>\n",
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d1fd2b6",
+   "id": "e59e6d90",
    "metadata": {},
    "source": [
     "Extract compositional and thermal buoyancy components"
@@ -498,7 +498,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "766710d7",
+   "id": "5bd33fe8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -509,7 +509,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a4694581",
+   "id": "385db85f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae9d1b52",
+   "id": "83cfeca7",
    "metadata": {},
    "source": [
     "Create data frames for rolling average compositional dynamo strengths"
@@ -527,7 +527,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ffeec78e",
+   "id": "808dcf1f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c55b1ac",
+   "id": "a61177c9",
    "metadata": {},
    "source": [
     "Make figure"
@@ -548,7 +548,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e712f64c",
+   "id": "a250c241",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "627b3c71",
+   "id": "648b61de",
    "metadata": {},
    "source": [
     "Need to think about how to plot the ratio in a meaningful way on here"
@@ -594,7 +594,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "64914674",
+   "id": "3edeb9a8",
    "metadata": {},
    "source": [
     "## Endmember strength comparison <a class=\"anchor\" id=\"icfrac\"></a>\n",
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "389aeeb9",
+   "id": "735c092e",
    "metadata": {},
    "source": [
     "Import other endmember field strengths"
@@ -612,7 +612,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1b6391dd",
+   "id": "e2ef37bd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -632,7 +632,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e393370d",
+   "id": "87c63343",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -643,7 +643,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83a7e063",
+   "id": "034535c6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -656,7 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f996b30",
+   "id": "0a2a8d0b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -689,7 +689,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69be4bd2",
+   "id": "fb580a79",
    "metadata": {},
    "source": [
     "# Discussion"
@@ -697,7 +697,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "998abec2",
+   "id": "f08c1b54",
    "metadata": {},
    "source": [
     "## Convective lengthscales <a class=\"anchor\" id=\"conv\"></a>\n",
@@ -707,7 +707,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fcdfbc27",
+   "id": "35f63829",
    "metadata": {},
    "source": [
     "Define functions for r1 and r2"
@@ -716,7 +716,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7bdfe2b8",
+   "id": "8d6c12f5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -766,7 +766,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "758ab63c",
+   "id": "7c586fa4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -781,7 +781,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f23f7e65",
+   "id": "a82f67f3",
    "metadata": {},
    "source": [
     "Make plots"
@@ -790,7 +790,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26361465",
+   "id": "0aefb0ef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -814,7 +814,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96298738",
+   "id": "becf154e",
    "metadata": {},
    "source": [
     "There is a 5% difference between $r_i$ (inner core radius for concentric inward) and $r_1$ (outer core radius with passive inner core) even for the endmember where all the mass ends up in the passive inner core so it is reasonable to approximate them as the same.\n",
@@ -825,20 +825,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3aa9941e",
+   "id": "b5ed3c68",
    "metadata": {},
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots(nrows=1,ncols=1)\n",
     "#x = 0\n",
-    "ax.plot(t_plot_t[Xs2<Xs_eutectic],f[Xs<Xs_eutectic],label='f',color='black',linestyle='dashed')\n",
-    "ax.plot(t_plot_t[Xs2<Xs_eutectic],r1val1,label='x=0 r$_1$/r$_c$',color='#0000ca')\n",
+    "ax.plot(t_plot_t[Xs<Xs_eutectic],f[Xs<Xs_eutectic],label='f',color='black',linestyle='dashed')\n",
+    "ax.plot(t_plot_t[(Xs<Xs_eutectic)&(f<f0)],r1val1,label='x=0 r$_1$/r$_c$',color='#0000ca')\n",
     "# x = 0.5 simulated\n",
-    "ax.plot(t_plot_t[Xs2<Xs_eutectic],r1val3,label='x=0.5 r$_1$/r$_c$',color='forestgreen',linestyle='dashed')\n",
-    "ax.plot(t_plot_t2[Xs2<Xs_eutectic],r2val3,label='x=0.5 r$_2$/r$_c$',color='forestgreen')\n",
+    "ax.plot(t_plot_t[(Xs2<Xs_eutectic)&(f<f0)],r1val3,label='x=0.5 r$_1$/r$_c$',color='forestgreen',linestyle='dashed')\n",
+    "ax.plot(t_plot_t2[(Xs2<Xs_eutectic)&(f<f0)],r2val3,label='x=0.5 r$_2$/r$_c$',color='forestgreen')\n",
     "\n",
     "# x= 1\n",
-    "ax.plot(t_plot_t2[Xs2<Xs_eutectic],r2val2,label='x=1 r$_2$/r$_c$',color='#0079cb')\n",
+    "ax.plot(t_plot_t2[(Xs2<Xs_eutectic)&(f2<f0)],r2val2,label='x=1 r$_2$/r$_c$',color='#0079cb')\n",
     "\n",
     "ax.set_xlabel('Time /Ma')\n",
     "ax.set_ylabel('Fractional distance from core centre')\n",
@@ -851,7 +851,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d37b88f",
+   "id": "8996ff07",
    "metadata": {},
    "source": [
     "Effect of r1 on convective lengthscale is neglible but r2 is important. *Not sure if this plot is required.*"
@@ -859,7 +859,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c53770a6",
+   "id": "ad80085c",
    "metadata": {},
    "source": [
     "### Ratio of endmember field strengths and $Re_m$ <a class=\"anchor\" id=\"ratio\"></a>\n",
@@ -868,7 +868,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4cc6009b",
+   "id": "cab51c1d",
    "metadata": {},
    "source": [
     "Test the predicted ratio of convective lengthscale l to ratio of B or Rem, given by the gradient of a log-log plot.\n",
@@ -881,7 +881,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cbc7f104",
+   "id": "e8203197",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -894,8 +894,8 @@
     "ln1 = ax[0].plot(((r1val1-r2val1)/(r1val2-r2val2)),(Bdf.rolling(window=wn,center=True).mean()/Bdf2.rolling(window=wn,center=True).mean())[:max_ind],color='#0000ca')\n",
     "ln2 = ax[1].plot(((r1val1-r2val1)/(r1val2-r2val2)),(Remdf.rolling(window=wn,center=True).mean()/Remdf2.rolling(window=wn,center=True).mean())[:max_ind],color='#0000ca')\n",
     "#proposed relationship - only plot after the Nan added by the rolling mean function\n",
-    "ln3 = ax[0].plot(((r1val1-r2val1)/(r1val2-r2val2))[int(wn/2):],((r1val1-r2val1)/(r1val2-r2val2))[int(wn/2):],color='#0079cb',linestyle='dashed')\n",
-    "ln4 = ax[1].plot(((r1val1-r2val1)/(r1val2-r2val2))[int(wn/2):],(((r1val1-r2val1)/(r1val2-r2val2))**(2))[int(wn/2):],linestyle='dashed',color='#0079cb')\n",
+    "ln3 = ax[0].plot(((r1val1-r2val1)/(r1val2-r2val2))[int(wn/2):],(((r1val1-r2val1)/(r1val2-r2val2))**(-0.24))[int(wn/2):],color='#0079cb',linestyle='dashed')\n",
+    "ln4 = ax[1].plot(((r1val1-r2val1)/(r1val2-r2val2))[int(wn/2):],(((r1val1-r2val1)/(r1val2-r2val2))**(0.32))[int(wn/2):],linestyle='dashed',color='#0079cb')\n",
     "\n",
     "ax[0].set_ylabel('$B_{x=0}/B_{x=1}$')\n",
     "ax[1].set_ylabel('$Re_{m,x=0}/Re_{m,x=1}$')\n",
@@ -905,7 +905,7 @@
     "ax[0].set_yscale('log')\n",
     "ax[1].set_yscale('log')\n",
     "\n",
-    "ax[0].legend(ln1+ln3,['Model output','$B_{x=0}$/$B_{x=1}$ $\\propto$ $l_{x=0}$/$l_{x=1}$'])\n",
+    "ax[0].legend(ln1+ln3,['Model output','$(B_{x=0}$/$B_{x=1}$ $\\propto$ $l_{x=0}$/$l_{x=1})^{-0.24}$'])\n",
     "ax[1].legend(ln2+ln4,['Model output','$B_{x=0}$/$B_{x=1}$ $\\propto$ $(l_{x=0}/l_{x=1})^{0.32}$'])\n",
     "if save == True:\n",
     "    plt.savefig(f'{save_path}Bratios.png',dpi=450)"
@@ -914,7 +914,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab11e1ac",
+   "id": "790b755b",
    "metadata": {},
    "outputs": [],
    "source": []
