Add calculation for sintering time

--- a/Plotting_scripts/Icarus_paper_plots.ipynb
+++ b/Plotting_scripts/Icarus_paper_plots.ipynb
@@ -65,7 +65,7 @@
    "outputs": [],
    "source": [
     "run=1\n",
-    "save = True # do you want to save your figures?\n",
+    "save = False # do you want to save your figures?\n",
     "automated = True \n",
     "log_time = True #do you want to plot time logarithmically\n",
     "path = '../Results_combined/Dodds_comp/' #path to files\n",
@@ -409,6 +409,55 @@
    "metadata": {},
    "source": [
     "From Rem plot I think the magnetic field might turn off briefly?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b9b3a0ef",
+   "metadata": {},
+   "source": [
+    "How long is the planetesimal below 700K?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "918a6e13",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tacc = 0.8 #accretion time in Ma\n",
+    "tsint = np.zeros([1000])\n",
+    "for i in range(1000):\n",
+    "    tsint[i]=tall[Tall[i,:]>700][0]\n",
+    "tshort = np.min(tsint/Myr-tacc)\n",
+    "print(f'The shortest time before sintering is {tshort:.2f} Ma \\\n",
+    "and the longest time before sintering is {np.max(tsint/Myr-tacc):.2f} Ma')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0f93cc6e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rcheck = rplot[:-1] #remove surface point\n",
+    "rsint = rcheck[(tsint/Myr)>(tshort+tacc)]\n",
+    "print(f'The inner {rsint[0]}km sinters within {tshort:.1f} Ma of accretion')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "39da957e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.scatter(np.linspace(1,1000,1000)*dr/1e3,tsint/Myr-tacc)\n",
+    "plt.xlabel('Distance from centre of planetesimal/km')\n",
+    "plt.ylabel('Time between accretion and sintering /Ma')\n",
+    "plt.ylim(bottom=0)"
    ]
   },
   {
