Neatened up example run plots for paper

--- a/Plotting_scripts/Icarus_paper_plots.ipynb
+++ b/Plotting_scripts/Icarus_paper_plots.ipynb
@@ -54,7 +54,9 @@
    "id": "e2694a4b",
    "metadata": {},
    "source": [
-    "Choose run for main thermal plots and where to save files"
+    "Choose run for main thermal plots and where to save files.\n",
+    "\n",
+    "Run 3 and 4 are runs that include $^{60}Fe$ but have all other parameters the same as Dodds 2021. Run 4 has $m_{frac}$=1 so use as default for plotting."
    ]
   },
   {
@@ -64,7 +66,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "run=1\n",
+    "run=4\n",
     "save = False # do you want to save your figures?\n",
     "automated = True \n",
     "log_time = True #do you want to plot time logarithmically\n",
@@ -394,21 +396,13 @@
     "    plt.vlines(tpt[t_plot_t<=fcond_t][-1],r/1e3,rc/1e3,linestyle='dotted',label='conductive mantle',color='red')\n",
     "plt.plot(tpt[f<f0],f[f<f0]*rc/1e3,linestyle='-.',color='black',label='Top of liquid core')\n",
     "#labels and limits\n",
-    "plt.ylabel('Distance from centre of asteroid/km')\n",
+    "plt.ylabel('Distance from centre of planetesimal/km')\n",
     "plt.xlabel('log(Time / Ma)')\n",
     "plt.colorbar(label='Temperature/K')\n",
     "plt.ylim(bottom=0)\n",
     "plt.legend(bbox_to_anchor=[1.4,0.5])\n",
     "if save == True:\n",
-    "    plt.savefig(f'{save_path}run_{run}_thermal_profile.png',bbox_inches='tight')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "32211a03",
-   "metadata": {},
-   "source": [
-    "From Rem plot I think the magnetic field might turn off briefly?"
+    "    plt.savefig(f'{save_path}run_{run}_thermal_profile.pdf',bbox_inches='tight',dpi=500)"
    ]
   },
   {
@@ -448,19 +442,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "39da957e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.scatter(np.linspace(1,1000,1000)*dr/1e3,tsint/Myr-tacc)\n",
-    "plt.xlabel('Distance from centre of planetesimal/km')\n",
-    "plt.ylabel('Time between accretion and sintering /Ma')\n",
-    "plt.ylim(bottom=0)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "024a53e7",
    "metadata": {},
@@ -474,7 +455,17 @@
    "id": "e2915bd3",
    "metadata": {},
    "source": [
-    "Do we want to put the temperature panel on here or not? Which mantle temps do we want?"
+    "Have plotted only the central core temperature and convective mantle temperature."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e4e5bfee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "save = True"
    ]
   },
   {
@@ -484,22 +475,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "dl_end = int(dl[Tm_conv==0][0]/dr) #index of CMB b.l. base above CMB at cessation of convection\n",
     "plt.figure(tight_layout=True,figsize=[10,7])\n",
     "xmin=tstart\n",
     "\n",
     "#temperatures as function of time\n",
     "plt.subplot(2,1,1)\n",
     "\n",
-    "plt.plot(t_plot_t,Tc,label='central T$_c$')\n",
-    "plt.plot(t_plot_t,Tcmb,label='T$_{cmb}$')\n",
-    "plt.plot(t_plot_t[Tm_conv==0],Tm_mid[Tm_conv==0],label='T$_m$ - middle')\n",
-    "plt.plot(t_plot_t[Tm_conv!=0],Tm_conv[Tm_conv!=0],label='convective T$_m$')\n",
+    "plt.plot(t_plot_t,Tc,label='central core temperature',color='black')\n",
+    "plt.plot(t_plot_t[Tm_conv!=0],Tm_conv[Tm_conv!=0],label='convective mantle temperature',color='#FF5350')\n",
+    "plt.plot(t_plot_t[Tm_conv==0],T_profile[Tm_conv==0,nmantle+dl_end+2],label='conductive mantle temperature',color='#FF5350',linestyle='dashed')\n",
     "\n",
     "if log_time == True:\n",
     "    plt.xscale('log')\n",
-    "plt.ylim([1400,1550])\n",
+    "plt.ylim([1300,1550])\n",
     "plt.ylabel('T/K')\n",
-    "plt.legend(loc='lower left', ncol= 2)\n",
+    "plt.legend(loc='lower left')\n",
     "\n",
     "#fluxes as function of time\n",
     "plt.subplot(2,1,2)\n",
@@ -524,7 +515,7 @@
     "plt.legend(loc='upper right',ncol=2)\n",
     "\n",
     "if save == True:\n",
-    "    plt.savefig(f'{save_path}run_{run}_flux.png',dpi=450)"
+    "    plt.savefig(f'{save_path}run_{run}_flux.png',dpi=500)"
    ]
   },
   {
@@ -595,42 +586,60 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a918f55b",
+   "metadata": {},
+   "source": [
+    "There is a lag between the onset of solidification and the rolling average so plot the original time series and the average."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "a250c241",
    "metadata": {},
    "outputs": [],
    "source": [
-    "wn = 200 #averaging window width\n",
+    "wn = 75 #averaging window width\n",
     "fig, ax = plt.subplots(nrows=2,ncols=1,sharex='col',figsize=[10,8])\n",
     "#B and Rem\n",
     "ax2 = ax[0].twinx()\n",
     "ln1 = ax[0].plot(t_plot_t[f>=f0],np.ma.masked_where(Rem[f>=f0]<10,B[f>=f0]),color='black')\n",
-    "ax[0].plot(t_plot_t[f<f0],Bdf.rolling(window=wn,center=True).mean(),color='black')\n",
+    "ax[0].plot(t_plot_t[f<f0],np.ma.masked_where(Rem[f<f0]<10,B[f<f0]),color='black',alpha=0.1) #original series\n",
+    "ax[0].plot(t_plot_t[f<f0],Bdf.rolling(window=wn,center=True).mean(),color='black') #average\n",
     "ln2 = ax2.plot(t_plot_t[f>=f0],Rem[f>=f0],color='darkorchid')\n",
-    "ax2.plot(t_plot_t[f<f0],Remdf.rolling(window=wn,center=True).mean(),color='darkorchid')\n",
+    "ax2.plot(t_plot_t[f<f0],Rem[f<f0],color='darkorchid',alpha=0.1) #original series\n",
+    "ax2.plot(t_plot_t[f<f0],Remdf.rolling(window=wn,center=True).mean(),color='darkorchid') #average\n",
+    "\n",
     "ax2.hlines(10,min(t_plot_t),max(t_plot_t),linestyle='dashed',color='grey')\n",
-    "ax[0].legend(ln1+ln2,['B','Re$_m$'])\n",
+    "ax[0].legend(ln1+ln2,['Magnetic field strength','Re$_m$'])\n",
     "ax[0].set_ylabel('Magnetic field strength/ $\\mu T$')\n",
     "ax2.set_ylabel('$Re_m$')\n",
+    "ax[0].tick_params(axis='y',colors='black')\n",
+    "ax2.tick_params(axis='y',colors='darkorchid')\n",
+    "ax[0].yaxis.label.set_color('black') \n",
+    "ax2.yaxis.label.set_color('darkorchid') \n",
     "\n",
     "#thermal and compositional buoyancy flux\n",
-    "ax3 = ax[1].twinx()\n",
     "ln3 = ax[1].plot(t_plot_t[f>=f0],therm[f>=f0],color='black')\n",
     "ax[1].plot(t_plot_t[f<f0],thermdf.rolling(window=wn,center=True).mean(),color='black')\n",
     "ln4 = ax[1].plot(t_plot_t[f>=f0],comp[f>=f0],color='darkorchid')\n",
     "ax[1].plot(t_plot_t[f<f0],compdf.rolling(window=wn,center=True).mean(),color='darkorchid')\n",
-    "ln5 = ax3.scatter(t_plot_t[(f<f0)&(Xs<Xs_eutectic)],(compdf.rolling(window=wn,center=True).mean()/thermdf.rolling(window=wn,center=True).mean())\n",
-    "         [Xs[f<f0]<Xs_eutectic])\n",
-    "ax[1].set_xlabel('Time/Ma')\n",
-    "#ax[1].legend(ln3+ln4+ln5,['thermal','compositional','ratio'])\n",
-    "ax[1].set_ylabel('Buoyancy flux /kg$s^{-1}$')\n",
-    "ax[1].set_yscale('log')\n",
-    "ax[1].set_xscale('log')\n",
-    "ax3.set_ylabel('Compositional/Thermal buoyancy flux')\n",
-    "#ax3.set_ylim([0,20])\n",
+    "ax[1].legend(ln3+ln4,['thermal','compositional'])\n",
+    "ax[1].set(xscale='log',yscale='log',ylim=[1e-11,1e-8],ylabel='Buoyancy flux /kg$s^{-1}$',xlabel='Time/Ma')\n",
+    "\n",
     "if save == True:\n",
-    "    plt.savefig(f'{save_path}run_{run}_Bbuoy.png',dpi=450)"
+    "    plt.savefig(f'{save_path}run_{run}_Bbuoy.png',dpi=500)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "033ec2a6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "save = True"
    ]
   },
   {
@@ -638,7 +647,19 @@
    "id": "648b61de",
    "metadata": {},
    "source": [
-    "Need to think about how to plot the ratio in a meaningful way on here"
+    "For the 500km body the buoyancy flux ratio is not useful, because of the cessation of mantle convection in the middle, but can add the code below to the plot abovr if you want to plot it."
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "c45283b9",
+   "metadata": {},
+   "source": [
+    "ax3 = ax[1].twinx()\n",
+    "ln5 = ax3.scatter(t_plot_t[(f<f0)&(Xs<Xs_eutectic)],abs(compdf.rolling(window=wn,center=True).mean()/thermdf.rolling(window=wn,center=True).mean())\n",
+    "         [Xs[f<f0]<Xs_eutectic],color='blue')\n",
+    "ax3.set_yscale('log')\n",
+    "ax3.set_ylabel('Compositional/Thermal buoyancy flux')"
    ]
   },
   {
@@ -665,7 +686,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "run = 2\n",
+    "run = 3\n",
     "r_run2, dr2, tstart2, dt2, viscosity2, icfrac2 = load_run_info(run,f'{path}auto_params.csv')\n",
     "npzfile = np.load(f'{path}run_{run}.npz')\n",
     "\n",
@@ -703,6 +724,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cd31ed62",
+   "metadata": {},
+   "source": [
+    "Only plot compositional dynamo"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "0a2a8d0b",
@@ -714,26 +743,33 @@
     "#B and Rem\n",
     "\n",
     "# B - icfrac = 0\n",
-    "ln1 = ax[0].plot(t_plot_t[f>=f0],np.ma.masked_where(Rem[f>=f0]<10,B[f>=f0]),color='#0000ca')\n",
-    "ax[0].plot(t_plot_t[f<f0],Bdf.rolling(window=wn,center=True).mean(),color='#0000ca')\n",
+    "#ln1 = ax[0].plot(t_plot_t[f>=f0],np.ma.masked_where(Rem[f>=f0]<10,B[f>=f0]),color='#0000ca')\n",
+    "ln1 = ax[0].plot(t_plot_t[f<f0],Bdf.rolling(window=wn,center=True).mean(),color='#0000ca')\n",
     "#icfrac = 1\n",
-    "ln2 = ax[0].plot(t_plot_t2[f2>=f0],np.ma.masked_where(Rem2[f2>=f0]<10,B2[f2>=f0]),color='#0079cb')\n",
-    "ax[0].plot(t_plot_t2[f2<f0],Bdf2.rolling(window=wn,center=True).mean(),color='#0079cb')\n",
+    "#ln2 = ax[0].plot(t_plot_t2[f2>=f0],np.ma.masked_where(Rem2[f2>=f0]<10,B2[f2>=f0]),color='#0079cb')\n",
+    "ln2 = ax[0].plot(t_plot_t2[f2<f0],Bdf2.rolling(window=wn,center=True).mean(),color='#0079cb')\n",
     "# Rem  icfrac = 0\n",
-    "ln3 = ax[1].plot(t_plot_t[f>=f0],Rem[f>=f0],color='#0000ca')\n",
-    "ax[1].plot(t_plot_t[f<f0],Remdf.rolling(window=wn,center=True).mean(),color='#0000ca')\n",
+    "#ln3 = ax[1].plot(t_plot_t[f>=f0],Rem[f>=f0],color='#0000ca')\n",
+    "ln3 = ax[1].plot(t_plot_t[f<f0],Remdf.rolling(window=wn,center=True).mean(),color='#0000ca')\n",
     "#icfrac = 1\n",
-    "ln4 = ax[1].plot(t_plot_t2[f2>=f0],Rem2[f2>=f0],color='#0079cb')\n",
-    "ax[1].plot(t_plot_t2[f2<f0],Remdf2.rolling(window=wn,center=True).mean(),color='#0079cb')\n",
+    "#ln4 = ax[1].plot(t_plot_t2[f2>=f0],Rem2[f2>=f0],color='#0079cb')\n",
+    "ln4 = ax[1].plot(t_plot_t2[f2<f0],Remdf2.rolling(window=wn,center=True).mean(),color='#0079cb')\n",
     "\n",
-    "ax[1].hlines(10,min(t_plot_t),max(t_plot_t),linestyle='dashed',color='grey')\n",
-    "ax[0].legend(ln1+ln2,['x=0','x=1'])\n",
-    "ax[1].legend(ln3+ln4,['x=0','x=1'])\n",
+    "ax[1].hlines(10,min(t_plot_t[f<f0]),max(t_plot_t),linestyle='dashed',color='grey')\n",
+    "ax[0].legend(ln1+ln2,[f'$m_{{frac}}$={icfrac:.0g}',f'$m_{{frac}}$={icfrac2:.0g}'])\n",
+    "ax[1].legend(ln3+ln4,[f'$m_{{frac}}$={icfrac:.0g}',f'$m_{{frac}}$={icfrac2:.0g}'])\n",
     "ax[0].set_ylabel('Magnetic field \\n strength/ $\\mu T$')\n",
-    "ax[1].set_ylabel('$Re_m$')\n",
-    "ax[1].set_xlabel('Time /Ma')\n",
+    "ax[1].set(xlabel='Time /Ma',ylabel='$Re_m$')\n",
     "if save == True:\n",
-    "    plt.savefig(f'{save_path}Bendmember.png',dpi=450)"
+    "    plt.savefig(f'{save_path}Bendmember.png',dpi=500)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b7f0d778",
+   "metadata": {},
+   "source": [
+    "There is negligible difference in field strength and $Re_m$ between the two endmembers. Increasing $m_{frac}$, increases field strength but decreases $Re_m$."
    ]
   },
   {
